Added grouping function to conversion.js
Next: include conversion of tags inside groupings.

--- a/03_jQuery-Test/50svid.html
+++ b/03_jQuery-Test/50svid.html
@@ -55,7 +55,9 @@
 <dd>v. 1. From the jubilation of V-J day to the shocking Rosenberg Trial, 1945-1952 -- v. 2. From the invention of television to the first steps in space, 1953-1960 -- v. 3. From the Kennedy era to the final U.S. withdrawal from Vietnam, 1961-1975 -- v. 4. From America's bicentennial celebration to the Geneva summit, 1976-1985. 213 min. <b>Video/C 963</b><br></dd>
 </dl>
 <dl>
-<dt><b>Adlai E. Stevenson, Welcoming and Acceptance Speeches at the Democratic National Convention, July 1952. Sound/C 918</b><br></dt>
+<dt><b>Adlai E. Stevenson, Welcoming and Acceptance Speeches at the Democratic National Convention, July 1952.</b> </dt><dd>Welcoming address, July 21, 1952. Nomination acceptance speech, July 26, 1952. Sound/C 918</dd></dt>
+</dl>
+<dl>
 <dt><b>Arguing the World.</b></dt>
 <dd>Traces the lives of four of the 20th century's leading thinkers, Daniel Bell, Nathan Glazer, Irving Howe and Irving Kristol. They have been disagreeing with a vengeance since they studied together at New York City College in the 1930s. This film traces their early idealistic days, their controversial role in the McCarthy era, their battle with the New Left in the sixties, and their vastly differing political views today. A film by Joseph Dorman. 1997. 84 min. <b>Video/C 5541</b><br></dd>
 </dl>
@@ -74,23 +76,13 @@
 <dl>
 <dt><b>The Best of See It Now</b></dt>
 <dd>Contents: Korean War -- Desegregation in the South --Eisenhower/Taft election -- Quality of American schools -- Peacetime uses of atomic energy -- Discussion with the scentists who discovered nuclear energy -- Flying into the eye of Hurricane Edna -- Flooding of the Missouri River -- Conversation with Carl Sandburg -- Marian Anderson's goodwill tour of Asia -- Two American originals: Grandma Moses and Louis Armstrong. Edward R. Murrow; host, Mike Wallace.<br>
-Hosted by Mike Wallace, this documentary presents original footage from the CBS See It Now television series in which Edward R. Murrow documented the news of the previous week, inviting viewers to witness history and to meet the people directly shaping events. Originally broadcast in 1991. 90 min. <b>DVD 4010  Video/C 2923</b><br>
-<br>
-<dd data-sortby="9">Related web sites:</dd></dd>
+Hosted by Mike Wallace, this documentary presents original footage from the CBS See It Now television series in which Edward R. Murrow documented the news of the previous week, inviting viewers to witness history and to meet the people directly shaping events. Originally broadcast in 1991. 90 min. <b>DVD 4010  Video/C 2923</b>
+<h4>Related web sites:</h4>
+  <ul>
+<li>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/S/htmlS/seeitnow/seeitnow.htm">See It Now website (Museum of Broadcast Communications)Ж</li>
+<li>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/M/htmlM/murrowedwar/murrowedwar.htm">Edward R. Murrow information (Museum of Broadcast Communications)Ж</li>
+</ul>
 </dl>
-<dl>
-<dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/S/htmlS/seeitnow/seeitnow.htm">See It Now website (Museum of Broadcast Communications)Ж</dd>
-<dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/M/htmlM/murrowedwar/murrowedwar.htm">Edward R. Murrow information (Museum of Broadcast Communications)Ж</dd>
-</dl>
-<br>
-<dl>
-<dd data-sortby="9">See also:</dd>
-<dd>â€¢149;Ѭ href="#murrow">This is Edward R. MurrowЖ</dd>
-<dd>â€¢149;Ѭ href="#murrow2">This ReporterЖ</dd>
-</dl>
-<br>
-<br>
-Ѭ href="http://www.lib.berkeley.edu/MRC/murrow.html">See separate bibliography of reviews and articles about this filmЖ<br>
 <dl>
 <dt><b>Brave New World, The Cold War</b> (<i>People's Century</i>)</dt>
 <dd>Just over fifty years ago, Soviet and American troops met at the River Elbe and rejoiced at the defeat of Nazi Germany but their optimism was short lived. This film tracks the building tensions between these two superpowers, from the post-war world of the late 1940s through the early 1960s, as the hope for peace swiftly disintegrated into a "cold" war. Here eyewitnesses recall the meeting on the Elbe, the impact of Stalin, Churchill and Khrushchev, propaganda wars between the two nations, the Berlin blockade, the Hungarian uprising and the installation of the Berlin Wall. 1998. 56 min <b>Video/C 5552</b><br>
